# pa-saber

electronica/: Avvf.txt  a.out  bode.cpp  fase.cpp  phivf.txt
testing/matplot++/: CMakeLists.txt
testing/matplot++/src/: plotting.cpp
testing/sine/src/: sine.cpp
